fixed index and fontawesome

--- a/register/index.html
+++ b/register/index.html
@@ -11,12 +11,12 @@
  <div id="header">
    <nav>
           <div id="logo" >
-             <a href="../home/index.html" >
+             <a href="../index.html" >
                 <img src="../Anh/logo.png">
              </a>
            </div>  
              <ul id="main-menu">	
-               <li><a href="../home/index.html">Trang chủ</a></li>
+               <li><a href="../index.html">Trang chủ</a></li>
                 <li><a href="../khoahoc/index.html">Khóa học</a></li>
                 <li><a href="">Thông báo</a></li>
                 <li><a href="../login/index.html">Đăng nhập</a></li>
@@ -79,11 +79,11 @@
    </div>
  </div>
  <footer>
-  <a href="../home/index.html"><img src="../Anh/logo.png"></a>
+  <a href="../index.html"><img src="../Anh/logo.png"></a>
   <div align="right">
     <table width="70%" border="0" cellspacing="10" cellpadding="0">
       <tr>
-        <td><a href="../home/index.html">KT learn</a></td>
+        <td><a href="../index.html">KT learn</a></td>
         <td><a href="../login/index.html">Đăng nhập</a></td>
         <td><a href="../khoahoc/index.html">Khóa học</a></td>
         <td><a href="">Lớp học</a></td>
