--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
        <div id="header">
          <nav id="container">
           <div id="logo" >
-             <a href="../home/index.html" >
-                <img src="../Anh/logo.png">
+             <a href="index.html" >
+                <img src="Anh/logo.png">
              </a>
            </div>  
              <ul id="main-menu">	
-               <li><a href="home.html">Trang chủ</a></li>
-                <li><a href="../khoahoc/index.html">Khóa học</a></li>
+               <li><a href="index.html">Trang chủ</a></li>
+                <li><a href="khoahoc/index.html">Khóa học</a></li>
                 <li><a href="">Thông báo</a></li>
-                <li><a href="../login/index.html">Đăng nhập</a></li>
-                <li><a href="../register/index.html">Đăng ký</a></li>
-                <li><img src="../Anh/no_avata.jfif"></li>
+                <li><a href="login/index.html">Đăng nhập</a></li>
+                <li><a href="register/index.html">Đăng ký</a></li>
+                <li><img src="Anh/no_avata.jfif"></li>
                 <li><i class="fas fa-align-justify" id="fas"></i>
                      <ul class="sub-menu">
                          <li><a href="">cài đặt</a></li>
@@ -39,7 +39,7 @@
                     <p>Chúng tôi giúp bạn học lập trình web online thay vì học mò mẫm không có hiệu quả. Bạn được hỗ trợ 24/24 từ người hướng dẫn, học bất kỳ lúc nào, học bất kỳ đâu. Hiện đã có rất nhiều người theo học và có kết quả tốt. Vì vậy bây giờ hãy để chúng tôi giúp bạn!</p>
           </div>
           </div> 
-          <div id="image"><img src="../Anh/pexels-pixabay-270404.jpg"></div>           
+          <div id="image"><img src="Anh/pexels-pixabay-270404.jpg"></div>           
       </div>
   </div>  
   <div id="reason">
@@ -70,17 +70,17 @@
         <h2> Bạn đã cảm thấy hứng thứ với khóa học của chúng tôi?</h2>
           <p> Nếu có hãy đến với các khóa học của chúng tôi.</p>
           <p>Một số khóa học tiêu biểu:</p>
-          <a href="../khoahoc/index.html">Thêm nhiều hơn >>></a>
+          <a href="khoahoc/index.html">Thêm nhiều hơn >>></a>
      </div>
  </div>
  <footer>
-<a href="index.html"><img src="../Anh/logo.png"></a>
+<a href="index.html"><img src="Anh/logo.png"></a>
 <div>
 <table width="70%" border="0" cellspacing="10" cellpadding="0">
   <tr>
     <td><a href="index.html">KT learn</a></td>
-    <td><a href="../login/index.html">Đăng nhập</a></td>
-    <td><a href="../khoahoc/index.html">Khóa học</a></td>
+    <td><a href="login/index.html">Đăng nhập</a></td>
+    <td><a href="khoahoc/index.html">Khóa học</a></td>
     <td><a href="">Lớp học</a></td>
   </tr>
   <tr>
