--- a/login/index.html
+++ b/login/index.html
@@ -10,12 +10,12 @@
 <div id="header">
   <nav>
           <div id="logo" >
-             <a href="../home/home.html" >
+             <a href="../index.html" >
                 <img src="../Anh/logo.png">
              </a>
            </div>  
              <ul id="main-menu">	
-               <li><a href="../home/index.html">Trang chủ</a></li>
+               <li><a href="../index.html">Trang chủ</a></li>
                 <li><a href="../khoahoc/index.html">Khóa học</a></li>
                 <li><a href="">Thông báo</a></li>
                 <li><a href="index.html">Đăng nhập</a></li>
@@ -102,11 +102,11 @@
 </div>
 </div>
 <footer>
-<a href="../home/index.html"><img src="../Anh/logo.png"></a>
+<a href="../index.html"><img src="../Anh/logo.png"></a>
 <div>
 <table width="70%" border="0" cellspacing="10" cellpadding="0">
   <tr>
-    <td><a href="../home/index.html">KT learn</a></td>
+    <td><a href="../index.html">KT learn</a></td>
     <td><a href="index.html">Đăng nhập</a></td>
     <td><a href="../khoahoc/index.html">Khóa học</a></td>
     <td><a href="">Lớp học</a></td>
