--- a/khoahoc/index.html
+++ b/khoahoc/index.html
@@ -126,7 +126,7 @@
                </div>
             </div>
              <div class="box2">
-               <img src="../Anh/css2.png">
+               <img src="../Anh/css2.jfif">
                 <div class="info">
                <h3>Khóa học CSS dành cho người mới</h3>
                <p> Nguyễn Huy Khoa</p>
