--- a/khoahoc/index.html
+++ b/khoahoc/index.html
@@ -38,7 +38,7 @@
             <div class="box">
                <img src="../Anh/html.png">
                <div class="info">
-               <h2>Khóa học HTML dành cho người mới</h2>
+               <h3>Khóa học HTML dành cho người mới</h3>
                <p> Nguyễn Huy Khoa</p>
                <p> 844 người đang học</p>
                <div class="cost"> 444.444đ</div>
@@ -55,7 +55,7 @@
              <div class="box2">
                <img src="../Anh/html2.jfif">
                <div class="info">
-               <h2>Khóa học HTML dành cho người mới</h2>
+               <h3>Khóa học HTML dành cho người mới</h3>
                <p> Nguyễn Huy Khoa</p>
                <p> 844 người đang học</p>
                <div class="cost"> 444.444đ</div>
@@ -72,7 +72,7 @@
              <div class="box3">
                <img src="../Anh/html3.jfif">
                <div class="info">
-               <h2>Khóa học HTML dành cho người mới</h2>
+               <h3>Khóa học HTML dành cho người mới</h3>
                <p> Nguyễn Huy Khoa</p>
                <p> 844 người đang học</p>
                <div class="cost"> 444.444đ</div>
@@ -89,7 +89,7 @@
              <div class="box4">
                <img src="../Anh/html4.jfif">
                <div class="info">
-               <h2>Khóa học HTML dành cho người mới</h2>
+               <h3>Khóa học HTML dành cho người mới</h3>
                <p> Nguyễn Huy Khoa</p>
                <p> 844 người đang học</p>
                <div class="cost"> 444.444đ</div>
@@ -401,23 +401,54 @@
          </div>
       </div>
 </div>
-<footer>
-<a href="../index.html"><img src="../Anh/logo.png"></a>
-<table width="70%" border="0" cellspacing="10" cellpadding="0">
-  <tr>
-    <td><a href="../index.html">KT learn</a></td>
-    <td><a href="../login/index.html">Đăng nhập</a></td>
-    <td><a href="index.html">Khóa học</a></td>
-    <td><a href="">Lớp học</a></td>
-  </tr>
-  <tr>
-    
-    <td><a href=""> Điều kiện</a></td>
-    <td><a href> Ứng dụng di động</a></td>
-    <td><a href="">Liên lạc với chúng tôi</a></td>
-    <td><a href=""> Chính sách bảo mật</a></td>
-  </tr>
-</table>
-</footer>
+    <footer class="footer">
+        <div class="footer1">
+            <img src="../Anh/logo.png">
+            <div class="content1">
+                <h3 class="f1">SỨ MẠNG</h3>
+                <p class="f1"></p>
+                <h3 class="f1">TẦM NHÌN</h3>
+                <p class="f1"></p>
+            </div>
+        </div>
+        <div class="footer2">
+            <h3 class="h3white">LIÊN KẾT</h3>
+            <ul class="list">
+                <li><a class="link" href="../index.html">Trang chủ</a></li>
+                <hr class="line">
+                <li><a class="link" href="index.html">Khóa Học</a></li>
+                <hr class="line">
+                <li><a class="link" href="../login/index.html">Đăng nhập</a></li>
+                <hr class="line">
+                <li><a class="link" href="../register/index.html">Đăng kí</a></li>
+                <hr class="line">
+                <li><a class="link" href=""></a></li>
+                <hr class="line">
+                <li><a class="link" href=""></a></li>
+            </ul>
+        </div>
+        <div class="footer3">
+            <h3 class="h3white">MẠNG XÃ HỘI</h3>
+            <ul class="list">
+                <li><a class="link" href=""><i class="fab fa-facebook-f"></i> 60.978 Likes</a></li>
+                <hr class="line">
+                <li><a class="link" href=""><i class="fab fa-twitter"></i> 9.860 Followers</a></li>
+                <hr class="line">
+                <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
+            </ul>
+        </div>
+        <div class="footer4">
+            <h3 class="h3white">LIÊN HỆ</h3>
+            <ul class="list">
+                <li>KT-learn@gmail.com</li>
+                <hr class="line">
+                <li>https://www.KT-learn.vn</li>
+                <hr class="line">
+                <li>Kp. 6, P. Linh Trung, Tp. Thủ Đức, Tp. HCM</li>
+                <hr class="line">
+                <li> 0976263355</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
