--- a/khoahoc/index.html
+++ b/khoahoc/index.html
@@ -406,9 +406,9 @@
             <img src="../Anh/logo.png">
             <div class="content1">
                 <h3 class="f1">SỨ MẠNG</h3>
-                <p class="f1"></p>
+                <p class="f1"> KT-learn là một website học lập trình web cho cho các bạn dam mê với web cung cấp các bài học chất lượng cao nhằm giúp các bạn sớm có thể làm việc để đáp ứng thị trường và phục vụ khách hàng một cách tốt nhất </p>
                 <h3 class="f1">TẦM NHÌN</h3>
-                <p class="f1"></p>
+                <p class="f1"> KT-learn đã và đang cố gắng để trở thành website tốt để giúp các bạn có đam mê đến với công việc web designer tại Việt Nam</p>
             </div>
         </div>
         <div class="footer2">
