--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Chào mừng đến với Undermine</title>
+<title>Chào mừng đến với KT-learn</title>
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
