Add Home Template

--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
-<html>
-<!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Chào mừng đến với KT-Learn</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link rel="stylesheet" href="fontawesome/css/all.css">
-<link rel="stylesheet" href="styles/styles_template.css">
 <link rel="stylesheet" href="styles/styles_home.css">
 <!-- InstanceEndEditable -->
+<link rel="stylesheet" href="fontawesome/css/all.css">
+<link rel="stylesheet" href="styles/styles_template.css">
 </head>
 
 <body>
@@ -32,65 +31,98 @@
     </ul>
   </nav>
 </header>
+	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-<div id="detail">
-  <div id="intro">
-    <div id="text">
-      <h2>KHÓA HỌC LẬP TRÌNH WEB ONLINE DÀNH CHO NGƯỜI MỚI</h2>
-      <p>Chúng tôi giúp bạn học lập trình web online thay vì học mò mẫm không có hiệu quả. Bạn được hỗ trợ 24/24 từ người hướng dẫn, học bất kỳ lúc nào, học bất kỳ đâu. Hiện đã có rất nhiều người theo học và có kết quả tốt. Vì vậy bây giờ hãy để chúng tôi giúp bạn!</p>
+<div id="mainpage">
+  <div id="detail">
+    <div id="intro">
+      <div id="text">
+        <h2>KHÓA HỌC LẬP TRÌNH WEB ONLINE DÀNH CHO NGƯỜI MỚI</h2>
+        <p>Chúng tôi giúp bạn học lập trình web online thay vì học mò mẫm không có hiệu quả. Bạn được hỗ trợ 24/24 từ người hướng dẫn, học bất kỳ lúc nào, học bất kỳ đâu. Hiện đã có rất nhiều người theo học và có kết quả tốt. Vì vậy bây giờ hãy để chúng tôi giúp bạn!</p>
+      </div>
+    </div>
+    <div id="image"><img src="images/pexels-pixabay-270404.jpg"></div>
+  </div>
+  <div id="reason">
+    <div>
+      <h2>Tại sao bạn nên học tại ...</h2>
+      <table cellspacing="20" cellpadding="0">
+        <tr>
+          <td><i class="fas fa-check-circle"></i>Học lộ trình từng bước cơ bản đến chuyên sâu</td>
+          <td><i class="fas fa-check-circle"></i>Tham gia group kín messenger hỏi đáp 24/24</td>
+        </tr>
+        <tr>
+          <td><i class="fas fa-check-circle"></i>Bài học được học lại nhiều lần đến khi hiểu</td>
+          <td><i class="fas fa-check-circle"></i>Tất cả các bài tập, đồ án được góp ý lỗi sai và tối ưu</td>
+        </tr>
+        <tr>
+          <td><i class="fas fa-check-circle"></i>Mỗi phần đều có bài tập ứng dụng thực tế</td>
+          <td><i class="fas fa-check-circle"></i>Hướng dẫn tạo ra những đồ án chất lượng đi tuyển dụng</td>
+        </tr>
+        <tr>
+          <td><i class="fas fa-check-circle"></i>Hướng dẫn trực tiếp bởi anh  Nguyễn Huy Khoa đã giúp hàng ngàn người có việc làm tốt từ lập trình web.</td>
+          <td><i class="fas fa-check-circle"></i>Hướng dẫn viết đơn xin việc - phỏng vấn hiệu quả</td>
+        </tr>
+      </table>
     </div>
   </div>
-  <div id="image"><img src="images/pexels-pixabay-270404.jpg"></div>
-</div>
-<div id="reason">
-  <div>
-    <h2>Tại sao bạn nên học tại ...</h2>
-    <table cellspacing="20" cellpadding="0">
-      <tr>
-        <td><i class="fas fa-check-circle"></i>Học lộ trình từng bước cơ bản đến chuyên sâu</td>
-        <td><i class="fas fa-check-circle"></i>Tham gia group kín messenger hỏi đáp 24/24</td>
-      </tr>
-      <tr>
-        <td><i class="fas fa-check-circle"></i>Bài học được học lại nhiều lần đến khi hiểu</td>
-        <td><i class="fas fa-check-circle"></i>Tất cả các bài tập, đồ án được góp ý lỗi sai và tối ưu</td>
-      </tr>
-      <tr>
-        <td><i class="fas fa-check-circle"></i>Mỗi phần đều có bài tập ứng dụng thực tế</td>
-        <td><i class="fas fa-check-circle"></i>Hướng dẫn tạo ra những đồ án chất lượng đi tuyển dụng</td>
-      </tr>
-      <tr>
-        <td><i class="fas fa-check-circle"></i>Hướng dẫn trực tiếp bởi anh  Nguyễn Huy Khoa đã giúp hàng ngàn người có việc làm tốt từ lập trình web.</td>
-        <td><i class="fas fa-check-circle"></i>Hướng dẫn viết đơn xin việc - phỏng vấn hiệu quả</td>
-      </tr>
-    </table>
+  <div id="courses">
+    <div>
+      <h2> Bạn đã cảm thấy hứng thứ với khóa học của chúng tôi?</h2>
+      <p> Nếu có hãy đến với các khóa học của chúng tôi.</p>
+      <p>Một số khóa học tiêu biểu:</p>
+      <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62</a> </div>
   </div>
 </div>
-<div id="courses">
-  <div>
-    <h2> Bạn đã cảm thấy hứng thứ với khóa học của chúng tôi?</h2>
-    <p> Nếu có hãy đến với các khóa học của chúng tôi.</p>
-    <p>Một số khóa học tiêu biểu:</p>
-    <a href="khoahoc/index.html">Thêm nhiều hơn >>></a> </div>
-</div>
 <!-- InstanceEndEditable -->
-<footer> <a href="index.html"><img src="images/logo.png"></a>
-  <div>
-    <table width="70%" border="0" cellspacing="10" cellpadding="0">
-      <tr>
-        <td><a href="index.html">KT learn</a></td>
-        <td><a href="login/index.html">Đăng nhập</a></td>
-        <td><a href="khoahoc/index.html">Khóa học</a></td>
-        <td><a href="">Lớp học</a></td>
-      </tr>
-      <tr>
-        <td><a href=""> Điều kiện</a></td>
-        <td><a href> Ứng dụng di động</a></td>
-        <td><a href="">Liên lạc với chúng tôi</a></td>
-        <td><a href=""> Chính sách bảo mật</a></td>
-      </tr>
-    </table>
+	
+<footer class="footer">
+  <div class="footer1"> <img src="images/logo.png">
+    <div class="content1">
+      <h3 class="f1">SỨ MẠNG</h3>
+      <p class="f1"> KT-learn là một website học lập trình web cho cho các bạn dam mê với web cung cấp các bài học chất lượng cao nhằm giúp các bạn sớm có thể làm việc để đáp ứng thị trường và phục vụ khách hàng một cách tốt nhất </p>
+      <h3 class="f1">TẦM NHÌN</h3>
+      <p class="f1"> KT-learn đã và đang cố gắng để trở thành website tốt để giúp các bạn có đam mê đến với công việc web designer tại Việt Nam</p>
+    </div>
+  </div>
+  <div class="footer2">
+    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <ul class="list">
+      <li><a class="link" href="index.html">HTML</a></li>
+      <hr class="line">
+      <li><a class="link" href="index.html">CSS</a></li>
+      <hr class="line">
+      <li><a class="link" href="login/index.html">Javascript</a></li>
+      <hr class="line">
+      <li><a class="link" href="register/index.html">JQuery</a></li>
+      <hr class="line">
+      <li><a class="link" href="">PHP</a></li>
+    </ul>
+  </div>
+  <div class="footer3">
+    <h3 class="h3white">GIỚI THIỆU</h3>
+    <ul class="list">
+      <li><a class="link" href=""><i class="fab fa-facebook-f"></i> 60.978 Likes</a></li>
+      <hr class="line">
+      <li><a class="link" href=""><i class="fab fa-twitter"></i> 9.860 Followers</a></li>
+      <hr class="line">
+      <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
+      <hr class="line">
+      <li><a class="link" href="">Về chúng tôi</a></li>
+    </ul>
+  </div>
+  <div class="footer4">
+    <h3 class="h3white">LIÊN HỆ</h3>
+    <ul class="list">
+      <li>KT-learn@gmail.com</li>
+      <hr class="line">
+      <li>https://www.KT-learn.vn</li>
+      <hr class="line">
+      <li>Kp. 6, P. Linh Trung, Tp. Thủ Đức, Tp. HCM</li>
+      <hr class="line">
+      <li> 0976263355</li>
+    </ul>
   </div>
 </footer>
 </body>
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
