--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html>
+<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
-<!-- TemplateBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
-<!-- TemplateEndEditable -->
-<!-- TemplateBeginEditable name="head" -->
-<link rel="stylesheet" href="">
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Khoá học HTML dành cho người mới</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<link rel="stylesheet" href="styles/styles_c_detail.css">
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" href="../styles/styles_template.css">
 </head>
@@ -32,9 +32,34 @@
   </nav>
 </header>
 	
-<!-- TemplateBeginEditable name="EditRegion3" -->
-EditRegion3
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion3" -->
+<div id="title">
+  <div id="title_detail">
+    <div id="nav">
+      <p><a class="nav" href="">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
+    </div>
+    <h2 id="course_name">Khoá học HTML dành cho người mới</h2>
+    <h3 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h3>
+    <p>Giảng viên: <a class="lecturer" href="">Ai đó</a></p>
+    <p>Ngày đăng: 21/12/2021</p>
+    <div id="btn_area">
+      <button id="join">Vào học ngay &#62&#62&#62</button>
+    </div>
+  </div>
+  <div id="right_side"><img src="../images/html.png"></div>
+</div>
+
+<div class="detail">
+  <h3>Bạn có thể học được:</h3>
+  <ul>
+    <li><p>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</p></li>
+    <li><p>Cài đặt Visual Studio Code vào hệ thống.</p></li>
+    <li><p>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</p></li>
+  </ul>
+  <h3>Giới thiệu khoá học:</h3>
+  <p>Đây là khoá học HTML dành cho người mới bắt đầu. Nó sẽ đem đến cho bạn những kiến thức nền tảng, cơ bản nhất về HTML để bạn có thể học lên các mức độ cao hơn.</p>
+</div>
+<!-- InstanceEndEditable -->
 	
 <footer class="footer">
   <div class="footer1"> <img src="../images/logo.png">
@@ -85,4 +110,4 @@ EditRegion3
   </div>
 </footer>
 </body>
-</html>
+<!-- InstanceEnd --></html>
