--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -17,11 +17,11 @@
   <nav id="container">
     <div id="logo" > <a href="index.html" > <img src="images/logo.png"> </a> </div>
     <ul id="main-menu">
-      <li><a href="home.html">Trang chủ</a></li>
-      <li><a href="khoahoc/index.html">Khóa học</a></li>
-      <li><a href="">Thông báo</a></li>
-      <li><a href="login/index.html">Đăng nhập</a></li>
-      <li><a href="register/index.html">Đăng ký</a></li>
+      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="">Thông báo</a></li>
+      <li><a class="main_nav" href="login/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="register/index.html">Đăng ký</a></li>
       <li><img src="images/no_avata.jfif"></li>
       <li><i class="fas fa-align-justify" id="fas"></i>
         <ul class="sub-menu">
