--- a/Root/IE104.CK/about/about.html
+++ b/Root/IE104.CK/about/about.html
@@ -33,7 +33,32 @@
 </header>
 	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-EditRegion3
+<div id="wrapper">
+  <div id="left-side">
+    <div id="box">
+       <ul>
+          <li>Về chúng tôi</li>
+          <li> Chính sách bảo mật </li>
+          <li> Riêng tư</li>
+          <li> Trợ giúp </li>
+       </ul>
+    </div>
+ </div>
+ <div id="right-side">
+ <h2> VỀ CHÚNG TÔI</h2>
+   <p>Chúng tôi là KT-learn. Chúng tôi tin rằng mọin cá nhân đều có khả năng được biết được thức và chúng tôi cố gắng giúp mọi nguời dễ dàng nhận được nhiều kiến thức hơn để cải thiện trình độ kỹ năng, để thăng tiến sự nghiệp hoặc triển trí tuệ của họ.</p>
+   <p>Chúng tôi nhận ra rằng việc sàng lọc, chứng chỉ và bằng cấp trực tuyến được cung cấp bởi các tổ chức trên toàn cầu là một nhiệm vụ khó khăn và đầy thủ thách.</p>
+   <p>Sinh viên thường không tìm được học phù hợp hoàn toàn với yêu cầu của họ và phải làm với những lộ trình học tập đơn giản là không đạt được mục tiêu của họ</p>
+   <p style="text-align:center; font-size:20px;"><strong>KT_learn ở đây để làm cho mọi thứ trở nên dễ dàng và thuận tiện hơn cho sinh viên Việt Nam</strong></p>
+   <p>Đội ngũ kỹ sư chuyên dụng của chúng tôi lập danh mục và lọc thông tin hàng ngày từ hàng nghìn khóa học trực tuyến từ các tổ chức. Chúng tôi giúp các cá nhân tìm thấy các lớp học ở một định dạng dễ tiếp cận và đơn giản, có thể giúp bạn ngay lập tức tìm được đối tượng phù hợp.</p>
+   <p>Bạn sẽ không phải đi qua từng trang web riêng lẻ và liên hệ với các nhà cung cấp riêng biệt, điều này luôn làm lãng phí thời gian và nguồn lực quý báu.</p>
+   <p>Với Coursary, bạn có thể chỉ cần nhập một chủ đề hoặc chủ đề mà bạn chọn và thuật toán phức tạp cung cấp cho bạn các tùy chọn thích hợp nhất!</p>
+   <p>Chúng tôi xóa bỏ rào cản giữa bạn và mục tiêu của bạn bằng cách giúp bạn dễ dàng tìm thấy các khóa học trực tuyến phù hợp chỉ với một nút bấm.</p>
+   <p>Chúng tôi tin rằng mọi người đều xứng đáng được tiếp cận với các nguồn kiến ​​thức đáng tin cậy và phát triển kỹ năng; đó là lý do tại sao chúng tôi đảm bảo rằng bạn có thể tìm thấy các khóa học, chứng chỉ và chương trình cấp bằng tốt nhất để giúp bạn học hỏi, trưởng thành và phát triển bộ kỹ năng của mình.</p>
+   <p>Coursary giúp bạn mở đường cho một tương lai xuất sắc bằng cách giúp bạn có những bước đi đúng đắn theo hướng tích cực.</p>
+   <p style="text-align:center; font-size:20px;"><strong>Hãy kiểm soát việc học và việc học của bạn với KT-learn</strong></p>
+ </div>
+</div>
 <!-- InstanceEndEditable -->
 	
 <footer class="footer">
