--- a/Root/IE104.CK/log-in/index.html
+++ b/Root/IE104.CK/log-in/index.html
@@ -8,44 +8,38 @@
 <!-- InstanceBeginEditable name="head" -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" href="../styles/styles_template.css">
-<link rel="stylesheet" href="../log-in/style/style.css">
+<link rel="stylesheet" href="style/style.css">
 <!-- InstanceEndEditable -->
 </head>
 
 <body>
-<div id="wrapper">
-  <header>
-    <nav id="container">
-      <div id="logo" >
-        <a href="../login/index.html" >
-          <img src="../images/logo.png">
-        </a>
-      </div>  
-        <ul id="main-menu">	
-          <li><a href="../login/home.html">Trang chủ</a></li>
-          <li><a href="../khoahoc/index.html">Khóa học</a></li>
-          <li><a href="">Thông báo</a></li>
-          <li><a href="../login/index.html">Đăng nhập</a></li>
-          <li><a href="../register/index.html">Đăng ký</a></li>
-          <li><img src="../images/no_avata.jfif"></li>
-          <li><i class="fas fa-align-justify" id="fas"></i>
-            <ul class="sub-menu">
-              <li><a href="">cài đặt</a></li>
-            </ul> 
-          </li>
+<header>
+  <nav id="container">
+    <div id="logo" > <a href="index.html" > <img src="../images/logo.png"> </a> </div>
+    <ul id="main-menu">
+      <li><a class="main_nav" href="home.html">Trang chủ</a></li>
+      <li><a class="main_nav" href="../khoahoc/index.html">Khóa học</a></li>
+      <li><a class="main_nav" href="">Thông báo</a></li>
+      <li><a class="main_nav" href="../login/index.html">Đăng nhập</a></li>
+      <li><a class="main_nav" href="../register/index.html">Đăng ký</a></li>
+      <li><img src="../images/no_avata.jfif"></li>
+      <li><i class="fas fa-align-justify" id="fas"></i>
+        <ul class="sub-menu">
+          <li><a href="">cài đặt</a></li>
         </ul>
-      </nav>
-  </header>
-</div>
+      </li>
+    </ul>
+  </nav>
+</header>
 	
-<!-- InstanceBeginEditable name="EditRegion3" -->
+<!-- InstanceBeginEditable name="EditRegion3" --> 
 	<div id="image">
    <h2>Học lập trình web online</h2>
    <p>Học theo lộ trình từng bước, được kèm qua nhóm kín đến khi ra nghề</p>
    <img src="../images/pexels-photo-251225.jpeg">
 </div>
 <div id="wrapper">
- <div id="container"> 
+ <div id="content"> 
   <div id="form-login">
      <div>
         <h2>LOGIN</h2>
@@ -117,5 +111,4 @@
 <!-- InstanceEnd -->
 <script src="https://code.jquery.com/jquery-3.6.0.js" ></script>
 <script src="../log-in/scrpit/script.js"></script>
-</html>
 </html>
