Add Lecturer page

--- a/Root/IE104.CK/about/about.html
+++ b/Root/IE104.CK/about/about.html
@@ -6,7 +6,7 @@
 <title>Về chúng tôi</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="./styles/styles_about.css">
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" href="../styles/styles_template.css">
@@ -35,29 +35,44 @@
 <!-- InstanceBeginEditable name="EditRegion3" -->
 <div id="wrapper">
   <div id="left-side">
-    <div id="box">
-       <ul>
-          <li>Về chúng tôi</li>
-          <li> Chính sách bảo mật </li>
-          <li> Riêng tư</li>
-          <li> Trợ giúp </li>
-       </ul>
-    </div>
- </div>
- <div id="right-side">
- <h2> VỀ CHÚNG TÔI</h2>
-   <p>Chúng tôi là KT-learn. Chúng tôi tin rằng mọin cá nhân đều có khả năng được biết được thức và chúng tôi cố gắng giúp mọi nguời dễ dàng nhận được nhiều kiến thức hơn để cải thiện trình độ kỹ năng, để thăng tiến sự nghiệp hoặc triển trí tuệ của họ.</p>
-   <p>Chúng tôi nhận ra rằng việc sàng lọc, chứng chỉ và bằng cấp trực tuyến được cung cấp bởi các tổ chức trên toàn cầu là một nhiệm vụ khó khăn và đầy thủ thách.</p>
-   <p>Sinh viên thường không tìm được học phù hợp hoàn toàn với yêu cầu của họ và phải làm với những lộ trình học tập đơn giản là không đạt được mục tiêu của họ</p>
-   <p style="text-align:center; font-size:20px;"><strong>KT_learn ở đây để làm cho mọi thứ trở nên dễ dàng và thuận tiện hơn cho sinh viên Việt Nam</strong></p>
-   <p>Đội ngũ kỹ sư chuyên dụng của chúng tôi lập danh mục và lọc thông tin hàng ngày từ hàng nghìn khóa học trực tuyến từ các tổ chức. Chúng tôi giúp các cá nhân tìm thấy các lớp học ở một định dạng dễ tiếp cận và đơn giản, có thể giúp bạn ngay lập tức tìm được đối tượng phù hợp.</p>
-   <p>Bạn sẽ không phải đi qua từng trang web riêng lẻ và liên hệ với các nhà cung cấp riêng biệt, điều này luôn làm lãng phí thời gian và nguồn lực quý báu.</p>
-   <p>Với Coursary, bạn có thể chỉ cần nhập một chủ đề hoặc chủ đề mà bạn chọn và thuật toán phức tạp cung cấp cho bạn các tùy chọn thích hợp nhất!</p>
-   <p>Chúng tôi xóa bỏ rào cản giữa bạn và mục tiêu của bạn bằng cách giúp bạn dễ dàng tìm thấy các khóa học trực tuyến phù hợp chỉ với một nút bấm.</p>
-   <p>Chúng tôi tin rằng mọi người đều xứng đáng được tiếp cận với các nguồn kiến ​​thức đáng tin cậy và phát triển kỹ năng; đó là lý do tại sao chúng tôi đảm bảo rằng bạn có thể tìm thấy các khóa học, chứng chỉ và chương trình cấp bằng tốt nhất để giúp bạn học hỏi, trưởng thành và phát triển bộ kỹ năng của mình.</p>
-   <p>Coursary giúp bạn mở đường cho một tương lai xuất sắc bằng cách giúp bạn có những bước đi đúng đắn theo hướng tích cực.</p>
-   <p style="text-align:center; font-size:20px;"><strong>Hãy kiểm soát việc học và việc học của bạn với KT-learn</strong></p>
- </div>
+    <ul id="nav_about">
+      <a href="#about"><li>Về chúng tôi</li></a>
+      <a href="#policy"><li>Chính sách bảo mật</li></a>
+      <a href="#private"><li>Quyền riêng tư</li></a>
+      <a href="#help"><li>Trợ giúp</li></a>
+    </ul>
+  </div>
+  <div id="right-side">
+    <h2 id="about"> VỀ CHÚNG TÔI</h2>
+    <p>Chúng tôi là KT-learn. Chúng tôi tin rằng mọi cá nhân đều có khả năng được biết được thức và chúng tôi cố gắng giúp mọi nguời dễ dàng nhận được nhiều kiến thức hơn để cải thiện trình độ kỹ năng, để thăng tiến sự nghiệp hoặc triển trí tuệ của họ.</p>
+    <p>Chúng tôi nhận ra rằng việc sàng lọc, chứng chỉ và bằng cấp trực tuyến được cung cấp bởi các tổ chức trên toàn cầu là một nhiệm vụ khó khăn và đầy thủ thách.</p>
+    <p>Sinh viên thường không tìm được học phù hợp hoàn toàn với yêu cầu của họ và phải làm với những lộ trình học tập đơn giản là không đạt được mục tiêu của họ</p>
+    <p style="text-align:center; font-size:20px;"><strong>KT_learn ở đây để làm cho mọi thứ trở nên dễ dàng và thuận tiện hơn cho sinh viên Việt Nam</strong></p>
+    <p>Đội ngũ kỹ sư chuyên dụng của chúng tôi lập danh mục và lọc thông tin hàng ngày từ hàng nghìn khóa học trực tuyến từ các tổ chức. Chúng tôi giúp các cá nhân tìm thấy các lớp học ở một định dạng dễ tiếp cận và đơn giản, có thể giúp bạn ngay lập tức tìm được đối tượng phù hợp.</p>
+    <p>Bạn sẽ không phải đi qua từng trang web riêng lẻ và liên hệ với các nhà cung cấp riêng biệt, điều này luôn làm lãng phí thời gian và nguồn lực quý báu.</p>
+    <p>Với Coursary, bạn có thể chỉ cần nhập một chủ đề hoặc chủ đề mà bạn chọn và thuật toán phức tạp cung cấp cho bạn các tùy chọn thích hợp nhất!</p>
+    <p>Chúng tôi xóa bỏ rào cản giữa bạn và mục tiêu của bạn bằng cách giúp bạn dễ dàng tìm thấy các khóa học trực tuyến phù hợp chỉ với một nút bấm.</p>
+    <p>Chúng tôi tin rằng mọi người đều xứng đáng được tiếp cận với các nguồn kiến ​​thức đáng tin cậy và phát triển kỹ năng; đó là lý do tại sao chúng tôi đảm bảo rằng bạn có thể tìm thấy các khóa học, chứng chỉ và chương trình cấp bằng tốt nhất để giúp bạn học hỏi, trưởng thành và phát triển bộ kỹ năng của mình.</p>
+    <p>Coursary giúp bạn mở đường cho một tương lai xuất sắc bằng cách giúp bạn có những bước đi đúng đắn theo hướng tích cực.</p>
+    <p style="text-align:center; font-size:20px;"><strong>Hãy kiểm soát việc học và việc học của bạn với KT-learn</strong></p>
+	  <h2 id="policy"> Chính sách</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta malesuada nisl vitae volutpat. Mauris in condimentum purus, sed rhoncus velit. Proin magna diam, faucibus tempor eleifend viverra, posuere id nisi. Nam rhoncus fringilla odio, in posuere purus. Cras eget blandit sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut tincidunt porta justo et sodales. Fusce vel sem eget tellus lobortis efficitur.</p>
+    <p>Donec leo dolor, auctor fringilla porta et, cursus eget lectus. Aenean congue velit non sem dictum tristique. Suspendisse egestas velit at sem placerat, sit amet varius dui bibendum. Maecenas ultricies vehicula facilisis. Curabitur convallis, metus et imperdiet mollis, mauris arcu mattis nibh, a dignissim arcu diam eget libero. Nulla molestie urna quis lacus molestie rutrum. Nulla eu velit elementum, viverra dolor non, malesuada lectus. Fusce eget turpis lectus. Suspendisse sed purus non ante accumsan tempus. Donec viverra sapien in turpis elementum, nec cursus lorem feugiat. Suspendisse sollicitudin sapien sit amet metus tincidunt tempor. Morbi leo augue, semper non nulla sed, varius semper dui. Donec lectus elit, semper vitae feugiat ut, volutpat id odio. Curabitur laoreet molestie quam, fermentum pulvinar sapien pulvinar non. Sed convallis, lectus eget convallis lobortis, magna lorem lacinia lectus, id maximus dui tellus nec orci. Proin ut felis eros.</p>
+    <p>Integer a interdum erat. Vivamus at gravida velit. Sed a urna congue, hendrerit orci vel, luctus sem. Ut id augue lacinia, elementum dolor nec, ultrices urna. Phasellus nec nisl non ipsum placerat ultrices. Cras tempor justo velit. Pellentesque nisi nulla, consequat quis hendrerit in, placerat et turpis. Proin at mi sollicitudin sem aliquet porta. Sed fringilla ipsum eget lacus viverra, quis mattis magna sodales. Donec libero libero, vestibulum lacinia ultricies non, interdum vitae lacus. Sed nisl dui, porta sit amet nisi non, venenatis fringilla eros. Ut volutpat venenatis gravida.</p>
+    <p>Sed malesuada erat leo, sit amet congue ipsum malesuada ac. Vivamus pretium odio enim, auctor dapibus mi faucibus vitae. Suspendisse nec felis lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Fusce id est eu enim volutpat pellentesque in a nunc. Aliquam ut est ac orci mollis tristique eu et dolor. Donec in malesuada velit. Etiam id lorem interdum, luctus mauris vel, accumsan lorem. Fusce feugiat iaculis libero et aliquet. Proin egestas mi ut placerat lacinia. Cras at commodo turpis. Nullam semper quam vel vehicula venenatis. Curabitur nec tristique dolor.</p>
+    <p>Vivamus fermentum pharetra nibh ac tincidunt. Quisque enim sapien, dignissim sit amet erat id, vulputate hendrerit nisl. Integer ante urna, lobortis a libero in, cursus tempus nunc. Vivamus tristique rutrum mollis. Sed enim nisl, rutrum in finibus ac, volutpat vitae nunc. Curabitur vitae lectus augue. Mauris bibendum tellus id arcu tempus, eu pulvinar metus scelerisque. Etiam ac lacinia massa, et iaculis massa. Sed id porttitor metus. Ut eros augue, tincidunt ut diam nec, consectetur sollicitudin nibh. Etiam feugiat eget risus a accumsan. In sed ultrices tortor. Praesent et scelerisque elit, sed sagittis diam. Sed dapibus metus sed risus hendrerit, auctor auctor ipsum viverra.</p>
+	  <h2 id="private">Quyền riêng tư</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta malesuada nisl vitae volutpat. Mauris in condimentum purus, sed rhoncus velit. Proin magna diam, faucibus tempor eleifend viverra, posuere id nisi. Nam rhoncus fringilla odio, in posuere purus. Cras eget blandit sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut tincidunt porta justo et sodales. Fusce vel sem eget tellus lobortis efficitur.</p>
+    <p>Donec leo dolor, auctor fringilla porta et, cursus eget lectus. Aenean congue velit non sem dictum tristique. Suspendisse egestas velit at sem placerat, sit amet varius dui bibendum. Maecenas ultricies vehicula facilisis. Curabitur convallis, metus et imperdiet mollis, mauris arcu mattis nibh, a dignissim arcu diam eget libero. Nulla molestie urna quis lacus molestie rutrum. Nulla eu velit elementum, viverra dolor non, malesuada lectus. Fusce eget turpis lectus. Suspendisse sed purus non ante accumsan tempus. Donec viverra sapien in turpis elementum, nec cursus lorem feugiat. Suspendisse sollicitudin sapien sit amet metus tincidunt tempor. Morbi leo augue, semper non nulla sed, varius semper dui. Donec lectus elit, semper vitae feugiat ut, volutpat id odio. Curabitur laoreet molestie quam, fermentum pulvinar sapien pulvinar non. Sed convallis, lectus eget convallis lobortis, magna lorem lacinia lectus, id maximus dui tellus nec orci. Proin ut felis eros.</p>
+    <p>Integer a interdum erat. Vivamus at gravida velit. Sed a urna congue, hendrerit orci vel, luctus sem. Ut id augue lacinia, elementum dolor nec, ultrices urna. Phasellus nec nisl non ipsum placerat ultrices. Cras tempor justo velit. Pellentesque nisi nulla, consequat quis hendrerit in, placerat et turpis. Proin at mi sollicitudin sem aliquet porta. Sed fringilla ipsum eget lacus viverra, quis mattis magna sodales. Donec libero libero, vestibulum lacinia ultricies non, interdum vitae lacus. Sed nisl dui, porta sit amet nisi non, venenatis fringilla eros. Ut volutpat venenatis gravida.</p>
+    <p>Sed malesuada erat leo, sit amet congue ipsum malesuada ac. Vivamus pretium odio enim, auctor dapibus mi faucibus vitae. Suspendisse nec felis lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Fusce id est eu enim volutpat pellentesque in a nunc. Aliquam ut est ac orci mollis tristique eu et dolor. Donec in malesuada velit. Etiam id lorem interdum, luctus mauris vel, accumsan lorem. Fusce feugiat iaculis libero et aliquet. Proin egestas mi ut placerat lacinia. Cras at commodo turpis. Nullam semper quam vel vehicula venenatis. Curabitur nec tristique dolor.</p>
+    <p>Vivamus fermentum pharetra nibh ac tincidunt. Quisque enim sapien, dignissim sit amet erat id, vulputate hendrerit nisl. Integer ante urna, lobortis a libero in, cursus tempus nunc. Vivamus tristique rutrum mollis. Sed enim nisl, rutrum in finibus ac, volutpat vitae nunc. Curabitur vitae lectus augue. Mauris bibendum tellus id arcu tempus, eu pulvinar metus scelerisque. Etiam ac lacinia massa, et iaculis massa. Sed id porttitor metus. Ut eros augue, tincidunt ut diam nec, consectetur sollicitudin nibh. Etiam feugiat eget risus a accumsan. In sed ultrices tortor. Praesent et scelerisque elit, sed sagittis diam. Sed dapibus metus sed risus hendrerit, auctor auctor ipsum viverra.</p>
+	  <h2 id="help">Trợ giúp</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta malesuada nisl vitae volutpat. Mauris in condimentum purus, sed rhoncus velit. Proin magna diam, faucibus tempor eleifend viverra, posuere id nisi. Nam rhoncus fringilla odio, in posuere purus. Cras eget blandit sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut tincidunt porta justo et sodales. Fusce vel sem eget tellus lobortis efficitur.</p>
+    <p>Integer a interdum erat. Vivamus at gravida velit. Sed a urna congue, hendrerit orci vel, luctus sem. Ut id augue lacinia, elementum dolor nec, ultrices urna. Phasellus nec nisl non ipsum placerat ultrices. Cras tempor justo velit. Pellentesque nisi nulla, consequat quis hendrerit in, placerat et turpis. Proin at mi sollicitudin sem aliquet porta. Sed fringilla ipsum eget lacus viverra, quis mattis magna sodales. Donec libero libero, vestibulum lacinia ultricies non, interdum vitae lacus. Sed nisl dui, porta sit amet nisi non, venenatis fringilla eros. Ut volutpat venenatis gravida.</p>
+    <p>Vivamus fermentum pharetra nibh ac tincidunt. Quisque enim sapien, dignissim sit amet erat id, vulputate hendrerit nisl. Integer ante urna, lobortis a libero in, cursus tempus nunc. Vivamus tristique rutrum mollis. Sed enim nisl, rutrum in finibus ac, volutpat vitae nunc. Curabitur vitae lectus augue. Mauris bibendum tellus id arcu tempus, eu pulvinar metus scelerisque. Etiam ac lacinia massa, et iaculis massa. Sed id porttitor metus. Ut eros augue, tincidunt ut diam nec, consectetur sollicitudin nibh. Etiam feugiat eget risus a accumsan. In sed ultrices tortor. Praesent et scelerisque elit, sed sagittis diam. Sed dapibus metus sed risus hendrerit, auctor auctor ipsum viverra.</p>
+  </div>
+	<div class="clear"></div>
 </div>
 <!-- InstanceEndEditable -->
 	
@@ -93,7 +108,7 @@
       <hr class="line">
       <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
       <hr class="line">
-      <li><a class="link" href="">Về chúng tôi</a></li>
+      <li><a class="link" href="about.html">Về chúng tôi</a></li>
     </ul>
   </div>
   <div class="footer4">
