--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -40,7 +40,7 @@
     </div>
     <h2 id="course_name">Khoá học HTML dành cho người mới</h2>
     <h3 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h3>
-    <p>Giảng viên: <a class="lecturer" href="">Ai đó</a></p>
+    <p>Giảng viên: <a class="lecturer" href="../lecturer-detail/lecturer-detail.html">Phạm Thùy Dung</a></p>
     <p>Ngày đăng: 21/12/2021</p>
     <div id="btn_area">
       <button id="join">Vào học ngay &#62&#62&#62</button>
@@ -93,7 +93,7 @@
       <hr class="line">
       <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
       <hr class="line">
-      <li><a class="link" href="">Về chúng tôi</a></li>
+      <li><a class="link" href="../about/about.html">Về chúng tôi</a></li>
     </ul>
   </div>
   <div class="footer4">
