--- a/Root/IE104.CK/courses-type/course-type.html
+++ b/Root/IE104.CK/courses-type/course-type.html
@@ -68,7 +68,7 @@ EditRegion3
       <hr class="line">
       <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
       <hr class="line">
-      <li><a class="link" href="">Về chúng tôi</a></li>
+      <li><a class="link" href="../about/about.html">Về chúng tôi</a></li>
     </ul>
   </div>
   <div class="footer4">
