--- a/Root/IE104.CK/lecturer-detail/lecturer-detail.html
+++ b/Root/IE104.CK/lecturer-detail/lecturer-detail.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+<html>
+<!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Phạm Thùy Dung</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="styles/styles_l.css">
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../fontawesome/css/all.css">
 <link rel="stylesheet" href="../styles/styles_template.css">
@@ -31,11 +32,84 @@
     </ul>
   </nav>
 </header>
-	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-EditRegion3
+<div id="title">
+  <div id="title_detail">
+    <h2>Giảng viên</h2>
+    <h1 id="lecturer_name">Phạm Thùy Dung</h1>
+    <h2 id="subtitle">Full-stack Developer</h2>
+    <p>Số khoá học: 7</p>
+    <p>Số học viên: 24.513</p>
+    <p>Thời gian tham gia: 9/1/2020</p>
+  </div>
+  <div id="right_side"><img src="../images/hinh-anh-nguoi-mau.jpg"></div>
+</div>
+<div class="detail">
+  <h2>Giới thiệu bản thân</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum molestie felis, eu semper tellus hendrerit eu. Maecenas finibus, velit ut sagittis ullamcorper, purus nisl faucibus velit, ut consectetur nibh mauris a nibh. Nulla molestie gravida sem eget ullamcorper. Duis eu orci urna. Fusce aliquam, arcu sit amet mollis venenatis, ex massa tincidunt erat, et malesuada diam enim tincidunt elit. Phasellus gravida elementum nibh in maximus. Duis aliquet metus dolor, vitae imperdiet sapien malesuada vitae. Duis consectetur vestibulum facilisis. Cras et quam aliquet, dictum nibh vel, tempor mi. Donec porta placerat leo non eleifend. Nullam dapibus velit ante, a consectetur quam mattis quis. Nullam consequat, mi eu porttitor tempus, quam tellus tincidunt ligula, non auctor purus erat sit amet libero. Sed neque quam, lobortis et urna a, suscipit tempus ante. Nunc suscipit felis sed erat fringilla, sit amet accumsan felis mollis. Aenean id luctus libero, quis imperdiet lectus.</p>
+  <p>Sed dolor nunc, varius a feugiat in, interdum et ante. Aenean vel lectus sit amet elit efficitur pellentesque. Sed consectetur mauris id orci fermentum volutpat. Curabitur accumsan massa nisi, at posuere lacus mattis ac. Morbi feugiat metus sit amet massa laoreet, at bibendum felis posuere. Suspendisse laoreet orci sed dui rhoncus, tempus sagittis enim accumsan. Morbi id viverra ipsum. Phasellus lacus felis, fringilla non fermentum id, semper in nibh.</p>
+  <p>Praesent id lobortis elit, eu semper ipsum. Ut dictum leo lectus, vitae eleifend odio porttitor vitae. Cras dictum, diam non sodales cursus, nisl purus luctus augue, ac viverra sem turpis sit amet lacus. Nam egestas semper quam, a efficitur nulla. Fusce condimentum, velit dictum pharetra mollis, ipsum libero molestie massa, at ultricies odio ipsum at turpis. Donec eu augue odio. Proin convallis est risus, ultrices fringilla dui pretium sed. Pellentesque odio quam, suscipit sed nisl in, ultrices venenatis urna. Nam congue, odio porttitor rhoncus feugiat, elit eros posuere turpis, vel porttitor lacus ipsum et diam. Ut non finibus dolor. Vestibulum tempus lobortis tempor. Sed at diam a leo elementum condimentum.</p>
+  <h2>Kỹ năng cá nhân</h2>
+  <div class="row">
+    <div class="side">
+      <div>HTML</div>
+    </div>
+    <div class="middle">
+      <div class="bar-container">
+        <div class="bar-html"></div>
+      </div>
+    </div>
+    <div class="side right">
+      <div>9</div>
+    </div>
+    <div class="side">
+      <div>CSS</div>
+    </div>
+    <div class="middle">
+      <div class="bar-container">
+        <div class="bar-css"></div>
+      </div>
+    </div>
+    <div class="side right">
+      <div>10</div>
+    </div>
+    <div class="side">
+      <div>Javascript</div>
+    </div>
+    <div class="middle">
+      <div class="bar-container">
+        <div class="bar-js"></div>
+      </div>
+    </div>
+    <div class="side right">
+      <div>8</div>
+    </div>
+    <div class="side">
+      <div>JQuery</div>
+    </div>
+    <div class="middle">
+      <div class="bar-container">
+        <div class="bar-jq"></div>
+      </div>
+    </div>
+    <div class="side right">
+      <div>6</div>
+    </div>
+    <div class="side">
+      <div>PHP</div>
+    </div>
+    <div class="middle">
+      <div class="bar-container">
+        <div class="bar-php"></div>
+      </div>
+    </div>
+    <div class="side right">
+      <div>7</div>
+    </div>
+  </div>
+  <h2>Các khoá học</h2>
+</div>
 <!-- InstanceEndEditable -->
-	
 <footer class="footer">
   <div class="footer1"> <img src="../images/logo.png">
     <div class="content1">
@@ -68,7 +142,7 @@ EditRegion3
       <hr class="line">
       <li><a class="link" href=""><i class="fab fa-youtube"></i> 8.159 Subscribe</a></li>
       <hr class="line">
-      <li><a class="link" href="">Về chúng tôi</a></li>
+      <li><a class="link" href="../about/about.html">Về chúng tôi</a></li>
     </ul>
   </div>
   <div class="footer4">
@@ -85,4 +159,5 @@ EditRegion3
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
