--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -71,6 +71,43 @@
       <h2> Bạn đã cảm thấy hứng thứ với khóa học của chúng tôi?</h2>
       <p> Nếu có hãy đến với các khóa học của chúng tôi.</p>
       <p>Một số khóa học tiêu biểu:</p>
+           <div class="courses-group">
+            <div class="box">
+               <img src="images/html.png">
+               <div class="info">
+               <h3>Khóa học HTML dành cho người mới</h3>
+               <p> Phạm Thùy Dung</p>
+               <p> 2509 người đang học</p>
+               <div class="cost"> 250,989đ</div>
+             </div>
+            <div class=" detail">
+               <h3>Bạn có thể học được</h3>
+                   <ul>
+                       <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+                       <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+                       <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+                   </ul>  
+               </div>
+             </div>
+                <div class="box2">
+               <img src="images/css2.jfif">
+                <div class="info">
+               <h3>Khóa học CSS dành cho người mới</h3>
+               <p> Nguyễn Huy Khoa</p>
+               <p> 3442 người đang học</p>
+              <div class="cost"> 234,552đ</div>
+               </div>
+               <div class="detail">
+                    <h3>Những gì bạn sẽ học</h3>
+                    <ul>
+                       <li>Xây dựng các trang web đẹp không chỉ chứa nội dung tuyệt vời mà còn phải trông đẹp mắt</li>
+                       <li>Sử dụng các tính năng CSS cơ bản cũng như nâng cao</li>
+                       <li>Hiểu các khái niệm và lý thuyết đằng sau CSS và các tính năng CSS nhất định</li>
+                    </ul>
+               </div>
+             </div>
+            </div>
+          </div>
       <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62</a> </div>
   </div>
 </div>
